--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependencies-{{ checksum "package.json" }}-{{ .Environment.CACHE_VERSION }}
+          key: dependencies-{{ checksum "package.json" }}-v1
       - run: yarn doc:build
       - run:
           name: Copy deployment artifacts to workspace
@@ -55,7 +55,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependencies-{{ checksum "package.json" }}-{{ .Environment.CACHE_VERSION }}
+          key: dependencies-{{ checksum "package.json" }}-v1
       - run:
           command: yarn test:ci
           environment:
@@ -72,7 +72,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependencies-{{ checksum "package.json" }}-{{ .Environment.CACHE_VERSION }}
+          key: dependencies-{{ checksum "package.json" }}-v1
       - run:
           command: yarn test:e2e
           environment:
