Prepare app for heroku

--- a/example.env
+++ b/example.env
@@ -1,6 +1,7 @@
 ## LOGGER
 LOG_LEVEL=debug
 LOG_SQL_REQUEST=false
+PORT=3000
 
 ## DB [TypeORM]
 DATABASE_URL=postgres://tpCi:someNotSecurePassword@localhost:5432/tpCi
